--- a/src/pages/series.astro
+++ b/src/pages/series.astro
@@ -3,6 +3,6 @@ import MainGridLayout from '@layouts/MainGridLayout.astro'
 import SeriesPanel from '@components/SeriesPanel.astro'
 ---
 
-<MainGridLayout title="专栏">
+<MainGridLayout title="series">
     <SeriesPanel></SeriesPanel>
 </MainGridLayout>
