--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -116,7 +116,7 @@ const { remarkPluginFrontmatter } = await entry.render();
     <!-- 字数统计和阅读时间 -->
     <div class="text-sm text-black/30 dark:text-white/30 flex gap-4 transition">
       <div>
-        {remarkPluginFrontmatter.words} 字
+        {remarkPluginFrontmatter.words} Characters
       </div>
       <div>|</div>
       <div>
