--- a/src/components/misc/Giscus.astro
+++ b/src/components/misc/Giscus.astro
@@ -1,8 +1,8 @@
 ---
 const configHTML = `
 <script src="https://giscus.app/client.js"
-        data-repo="yCENzh/Fuwari-yCENzh"
-        data-repo-id="R_kgDOPe85cQ"
+        data-repo="RumiDaNeko/rumi.blog"
+        data-repo-id="1068791370"
         data-category="Announcements"
         data-category-id="DIC_kwDOPe85cc4CuYZG"
         data-mapping="pathname"
@@ -11,7 +11,7 @@ const configHTML = `
         data-emit-metadata="1"
         data-input-position="top"
         data-theme="https://giscus-dkh.pages.dev/A.css"
-        data-lang="zh-CN"
+        data-lang="en-EN"
         data-loading="lazy"
         crossorigin="anonymous"
         async>
