--- a/src/components/misc/Giscus.astro
+++ b/src/components/misc/Giscus.astro
@@ -2,16 +2,16 @@
 const configHTML = `
 <script src="https://giscus.app/client.js"
         data-repo="RumiDaNeko/rumi.blog"
-        data-repo-id="1068791370"
+        data-repo-id="R_kgDOP7R2Sg"
         data-category="Announcements"
-        data-category-id="DIC_kwDOPe85cc4CuYZG"
+        data-category-id="DIC_kwDOP7R2Ss4CwLvg"
         data-mapping="pathname"
         data-strict="1"
         data-reactions-enabled="1"
         data-emit-metadata="1"
         data-input-position="top"
         data-theme="https://giscus-dkh.pages.dev/A.css"
-        data-lang="en-EN"
+        data-lang="en"
         data-loading="lazy"
         crossorigin="anonymous"
         async>
