--- a/src/components/misc/Giscus.astro
+++ b/src/components/misc/Giscus.astro
@@ -3,8 +3,8 @@ const configHTML = `
 <script src="https://giscus.app/client.js"
         data-repo="RumiDaNeko/rumi.blog"
         data-repo-id="R_kgDOP7R2Sg"
-        data-category="Announcements"
-        data-category-id="DIC_kwDOP7R2Ss4CwLvg"
+        data-category="General"
+        data-category-id="DIC_kwDOP7R2Ss4CwLvh"
         data-mapping="pathname"
         data-strict="1"
         data-reactions-enabled="1"
