--- a/src/components/SeriesPanel.astro
+++ b/src/components/SeriesPanel.astro
@@ -74,7 +74,7 @@ const groups: { category: string; series: Series[] }[] = (() => {
                 <div class="flex flex-row w-full items-center h-[3.75rem]">
                     <!-- 左侧添加总文章数 -->
                     <div class="w-[20%] md:w-[15%] text-sm text-right text-50 flex flex-row justify-end items-center pr-2">
-                        <span class="font-semibold text-75">{totalPosts} 篇文章</span>
+                        <span class="font-semibold text-75">{totalPosts} Posts</span>
                     </div>
                     
                     <!-- 大圆点 -->
@@ -94,7 +94,7 @@ const groups: { category: string; series: Series[] }[] = (() => {
                         <div class="flex flex-row justify-start items-center h-full">
                             <!-- count -->
                             <div class="w-[20%] md:w-[15%] text-sm text-right text-50">
-                                { s.count } 篇文章
+                                { s.count } Posts
                             </div>
                             <!-- dot and line -->
                             <div class="w-[15%] md:w-[10%] relative dash-line h-full flex items-center">
