--- a/src/components/SeriesPanel.astro
+++ b/src/components/SeriesPanel.astro
@@ -83,7 +83,7 @@ const groups: { category: string; series: Series[] }[] = (() => {
                     </div>
                     
                     <!-- 系列计数 -->
-                    <div class="w-[65%] md:w-[75%] text-left text-50">{group.series.length} 个专栏</div>
+                    <div class="w-[65%] md:w-[75%] text-left text-50">{group.series.length} Series</div>
                 </div>
                 
                 {group.series.map(s => (
